--- a/gram_stain_InceptionResNetV2.ipynb
+++ b/gram_stain_InceptionResNetV2.ipynb
@@ -247,7 +247,7 @@
     "from tensorflow.keras.optimizers import SGD\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, ReduceLROnPlateau, EarlyStopping\n",
     "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.applications import VGG16, InceptionV3, InceptionResNetV2\n",
+    "from tensorflow.keras.applications import VGG16, InceptionV3, InceptionResNetV2, EfficientNetB0\n",
     "from tensorflow.python.keras.engine import training\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "import matplotlib.pyplot as plt\n",
@@ -270,6 +270,12 @@
     "        base_model = InceptionResNetV2(include_top=False, weights=\"imagenet\", input_shape=input_shape)\n",
     "        for layer in base_model.layers[:775]:\n",
     "            layer.trainable = False\n",
+    "\n",
+    "    elif modelname == \"EfficientNetB0\":\n",
+    "        base_model = EfficientNetB0(include_top=False, weights=\"imagenet\", input_shape=input_shape)\n",
+    "        for layer in base_model.layers[-20:]:\n",
+    "                if not isinstance(layer, layers.BatchNormalization):\n",
+    "                    layer.trainable = True\n",
     "\n",
     "    elif modelname == \"InceptionV3\":\n",
     "        base_model = InceptionV3(include_top=False, weights=\"imagenet\", input_shape=input_shape)\n",
@@ -320,7 +326,8 @@
     "# Parameters\n",
     "batch_size = 128\n",
     "epochs = 30\n",
-    "classes = [filename for filename in os.listdir(data_dir) if not filename.startswith('.')]\n",
+    "#classes = [filename for filename in os.listdir(data_dir) if not filename.startswith('.')]\n",
+    "classes = [\"Staphylococcus aureus\", \"Coagulase-negative Staphylococcus\", \"Background\"]\n",
     "num_classes = len(classes)\n",
     "img_width, img_height = 512, 512\n",
     "feature_dim = (img_width, img_height, 3)\n",
@@ -1792,11 +1799,11 @@
     "\n",
     "Se_15 = se_linear(0.15)\n",
     "Sp_15 = sp_linear(0.15)\n",
-    "print(\"Sensitivity {:.2f}%, Specificity {:.2f}%, Threshold 0.15\".format(Se_15*100, Sp_15*100))\n",
+    "print(\"Sensitivity {:.2f}%, Specificity {:.2f}%, Threshold 15%\".format(Se_15*100, Sp_15*100))\n",
     "\n",
     "Se_80 = se_linear(0.8)\n",
     "Sp_80 = sp_linear(0.8)\n",
-    "print(\"Sensitivity {:.2f}%, Specificity {:.2f}%, Threshold 0.80\".format(Se_80*100, Sp_80*100))\n"
+    "print(\"Sensitivity {:.2f}%, Specificity {:.2f}%, Threshold 80%\".format(Se_80*100, Sp_80*100))\n"
    ]
   },
   {
@@ -2018,7 +2025,7 @@
     "with open(class_indices_path,'rb') as f:\n",
     "    class_indices = pickle.load(f)\n",
     "#classes = list(class_indices.keys())\n",
-    "classes = [\"S. aureus\", \"Background\", \"CNS\"]\n",
+    "classes = [\"S. aureus\", \"CNS\", \"Background\"]\n",
     "num_classes = len(classes)\n",
     "img_width, img_height = 512, 512\n",
     "feature_dim = (img_width, img_height, 3)\n",
@@ -2088,9 +2095,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_tensorflow2_p36)",
-   "language": "python",
-   "name": "conda_tensorflow2_p36"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('venv3': venv)",
+   "metadata": {
+    "interpreter": {
+     "hash": "c6c3ad692541bf2d2ec2d73f49a2526f9a8c0d7b9870e0f0113c90dbea34eb06"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -2102,7 +2113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3-final"
   }
  },
  "nbformat": 4,
